--- a/index.html
+++ b/index.html
@@ -174,37 +174,7 @@
       background:rgba(255,255,255,0.3);transform:scale(1.05);
     }
 
-    /* ===== مودال دانلود مقالات ===== */
-    .modal-btn {
-      position:fixed;top:12px;right:12px;
-      background:rgba(255,255,255,0.15);
-      color:white;border:none;padding:7px 14px;
-      border-radius:50px;cursor:pointer;font-size:0.8rem;
-      transition:all 0.3s ease;z-index:99;
-    }
-    .modal-btn:hover {background:rgba(255,255,255,0.3);transform:scale(1.05);}
-    .modal-overlay {
-      position:fixed;top:0;left:0;width:100%;height:100%;
-      background:rgba(0,0,0,0.5);display:none;
-      justify-content:center;align-items:center;z-index:100;
-    }
-    .modal {
-      background:#fff;color:#333;max-width:600px;width:90%;
-      max-height:80vh;overflow-y:auto;
-      border-radius:12px;padding:20px;
-      box-shadow:0 0 20px rgba(0,0,0,0.4);text-align:left;
-    }
-    .modal h3 {margin-bottom:10px;color:#660099;text-align:center}
-    .modal a {display:block;color:#333;margin:6px 0;text-decoration:none}
-    .modal a:hover {text-decoration:underline;color:#660099}
-    .close-modal {
-      display:block;margin:10px auto 0;
-      padding:6px 12px;border:none;
-      background:#660099;color:white;
-      border-radius:6px;cursor:pointer
-    }
-    .close-modal:hover {background:#9933cc}
-
+    .smooth-switch {animation:smoothFadeSlide 0.9s ease;}
     @keyframes smoothFadeSlide {
       0%{opacity:1;transform:translateY(0)}
       40%{opacity:0;transform:translateY(-15px)}
@@ -242,17 +212,6 @@
     <button id="btn-en">English</button>
   </div>
 
-  <button class="modal-btn" id="openModal">دانلود مقالات</button>
-  <div class="modal-overlay" id="modalOverlay">
-    <div class="modal">
-      <h3>مقالات</h3>
-      <a href="https://drive.google.com/file/d/1gZ8aF2_FtYW0XBLlXkPnH97Sx1cUNRxv/view?usp=drive_link" target="_blank">27. The Orthotropy Effect of Underground Inclusion ... (2024)</a>
-      <a href="https://drive.google.com/file/d/1hZ532hBk93MWAzn8dMg24jnVr2pg0ZNg/view?usp=drive_link" target="_blank">26. Seismic Response of the Orthotropic Ground ... (2024)</a>
-      <!-- تمام لینک‌های مقالات دیگر را اینجا اضافه کنید -->
-      <button class="close-modal" id="closeModal">بستن</button>
-    </div>
-  </div>
-
   <div class="profile-container">
     <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
       <defs><clipPath id="circleView"><circle cx="50" cy="50" r="50"/></clipPath></defs>
@@ -268,7 +227,7 @@
   <div class="link-bar" id="links"></div>
 
   <div class="about-box" id="about-text" tabindex="0" aria-label="درباره دکتر سعید مجتبی‌زاده">
-    دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر ...
+    دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. 
   </div>
 
   <div class="contact-box">
@@ -281,16 +240,73 @@
   </div>
 
   <script defer>
-    const data={/* همان داده‌های شما بدون تغییر */};
+    const data={
+      fa:{
+        title:"دکتر سعید مجتبی‌زاده",
+        sub:"فوق‌دکتری مهندسی عمران در گرایش ژئوتکنیک لرزه‌ای",
+        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. `,
+        footer:"سعید مجتبی‌زاده ©",
+        links:[
+          {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
+          {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
+          {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
+          {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
+          {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
+          {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+          {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
+          {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"}
+        ]
+      },
+      en:{
+        title:"Dr. Saeed Mojtabazadeh",
+        sub:"Postdoc Fellow in Geotechnical Engineering",
+        about:`Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran, specializing in computational algorithms. Since 2016, Dr. Mojtabazadeh has been dedicated to advanced numerical modeling in seismic geomechanics. His Ph.D. thesis and postdoctoral research focus on investigating SH-wave propagation in orthotropic mediums, along with topographic features, utilizing an exclusive approach known as the Direct Half-Space Time-Domain Boundary Element Method. He has developed multiple numerical approaches, including the Boundary Element Method (BEM), Finite Element Method (FEM), and Hybrid methods, applied to seismic analysis in geotechnical engineering.`,
+        footer:"Saeed Mojtabazadeh ©",
+        links:[
+          {text:"Website",href:"http://mojtabazadeh.ir/"},
+          {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
+          {text:"Studies",href:"http://www.smojtabazadeh.ir/"},
+          {text:"Instagallery",href:"https://www.instagallery.ir/"},
+          {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
+          {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+          {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
+          {text:"English Hub",href:"https://www.mojtabazade.ir/"}
+        ]
+      }
+    };
 
     const mainTitle=document.getElementById("main-title"),
           subTitle=document.getElementById("sub-title"),
           linksContainer=document.getElementById("links"),
           aboutText=document.getElementById("about-text");
 
-    function buildLinks(lang){/* بدون تغییر */}
-    function switchLang(lang){/* بدون تغییر */}
-
+    function buildLinks(lang){
+      linksContainer.innerHTML="";
+      data[lang].links.forEach(l=>{
+        const a=document.createElement("a");
+        a.href=l.href;a.target="_blank";a.textContent=l.text;
+        linksContainer.appendChild(a);
+      });
+    }
+    function switchLang(lang){
+      localStorage.setItem("lang",lang);
+      document.body.classList.add("smooth-switch");
+      setTimeout(()=>{
+        mainTitle.textContent=data[lang].title;
+        subTitle.textContent=data[lang].sub;
+        aboutText.textContent=data[lang].about;
+        document.getElementById("footer").textContent=data[lang].footer;
+        buildLinks(lang);
+        if(lang==="en"){
+          document.body.classList.add("lang-en");
+          document.documentElement.dir="ltr";
+        }else{
+          document.body.classList.remove("lang-en");
+          document.documentElement.dir="rtl";
+        }
+      },300);
+      setTimeout(()=>document.body.classList.remove("smooth-switch"),900);
+    }
     const savedLang=localStorage.getItem("lang")||"fa";
     switchLang(savedLang);
     document.getElementById("btn-fa").addEventListener("click",()=>switchLang("fa"));
@@ -298,20 +314,53 @@
 
     const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
     let particles=[];
-    function createParticles(){/* بدون تغییر */}
-    function resizeParticles(){/* بدون تغییر */}
+    function createParticles(){
+      const count=Math.floor((window.innerWidth*window.innerHeight)/12000);
+      particles=Array.from({length:count},()=>({
+        x:Math.random()*window.innerWidth,
+        y:Math.random()*window.innerHeight,
+        r:Math.random()*1.8+1,
+        dx:(Math.random()-0.5)*0.4,
+        dy:(Math.random()-0.5)*0.4
+      }));
+    }
+    function resizeParticles(){
+      const ratio=window.devicePixelRatio||1;
+      canvas.width=window.innerWidth*ratio;
+      canvas.height=window.innerHeight*ratio;
+      ctx.setTransform(1,0,0,1,0,0);
+      ctx.scale(ratio,ratio);
+      createParticles();
+    }
     resizeParticles();
     window.addEventListener("resize",resizeParticles);
-    (function draw(){/* بدون تغییر */})();
 
-    // ==== کد مودال ====
-    const modalOverlay=document.getElementById("modalOverlay"),
-          openModal=document.getElementById("openModal"),
-          closeModal=document.getElementById("closeModal");
-    openModal.addEventListener("click",()=>modalOverlay.style.display="flex");
-    closeModal.addEventListener("click",()=>modalOverlay.style.display="none");
-    modalOverlay.addEventListener("click",(e)=>{if(e.target===modalOverlay)modalOverlay.style.display="none"});
-    document.addEventListener("keydown",(e)=>{if(e.key==="Escape")modalOverlay.style.display="none"});
+    (function draw(){
+      ctx.clearRect(0,0,window.innerWidth,window.innerHeight);
+      ctx.fillStyle="rgba(200,150,255,0.8)";
+      particles.forEach(p=>{
+        ctx.beginPath();ctx.arc(p.x,p.y,p.r,0,Math.PI*2);ctx.fill();
+        p.x+=p.dx;p.y+=p.dy;
+        if(p.x<0||p.x>window.innerWidth)p.dx*=-1;
+        if(p.y<0||p.y>window.innerHeight)p.dy*=-1;
+      });
+      ctx.strokeStyle="rgba(200,150,255,0.2)";
+      ctx.lineWidth=0.5;
+      for(let i=0;i<particles.length;i++){
+        for(let j=i+1;j<particles.length;j++){
+          const dx=particles[i].x-particles[j].x;
+          const dy=particles[i].y-particles[j].y;
+          const dist=Math.sqrt(dx*dx+dy*dy);
+          if(dist<120){
+            ctx.beginPath();
+            ctx.moveTo(particles[i].x,particles[i].y);
+            ctx.lineTo(particles[j].x,particles[j].y);
+            ctx.stroke();
+          }
+        }
+      }
+      requestAnimationFrame(draw);
+    })();
   </script>
 </body>
 </html>
