--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
 
 
-  <a href="https://www.dasbem.ir/" target="_blank" class="download-btn" id="download-btn">دانلود مقالات</a>
+  <a href="https://www.dasbem.ir/" target="_blank" class="download-btn" id="download-btn">پروژه داس‌بم</a>
 
   
 
@@ -346,7 +346,7 @@
         aboutText.textContent=data[lang].about;
         document.getElementById("footer").textContent=data[lang].footer;
         buildLinks(lang);
-        downloadBtn.textContent=(lang==="en"?"Download Papers":"دانلود مقالات");
+        downloadBtn.textContent=(lang==="en"?"The DASBEM Project":"پروژه داس‌بم");
         if(lang==="en"){
           document.body.classList.add("lang-en");
           document.documentElement.dir="ltr";
